syntax = "proto3";

package medium;

import "google/protobuf/timestamp.proto";

message Address {
    string street = 1;
    string city = 2;
    string country = 3;
    string zip_code = 4;
}

message Person {
    string name = 1;
    int32 age = 2;
    Address address = 3;
    repeated string hobbies = 4;
    map<string, string> metadata = 5;
    google.protobuf.Timestamp created_at = 6;
}

message Company {
    string name = 1;
    repeated Person employees = 2;
    map<string, Address> offices = 3;
    bool is_public = 4;
}
