/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
 
syntax = "proto3";

package realworld;

import "google/protobuf/timestamp.proto";

message LogLevel {
    enum Level {
        UNKNOWN = 0;
        DEBUG = 1;
        INFO = 2;
        WARN = 3;
        ERROR = 4;
        FATAL = 5;
    }
    Level level = 1;
}

message LogEntry {
    string id = 1;
    LogLevel.Level level = 2;
    string message = 3;
    string service = 4;
    google.protobuf.Timestamp timestamp = 5;
    map<string, string> context = 6;
    repeated string tags = 7;
    double duration_ms = 8;
}

message UserProfile {
    string user_id = 1;
    string username = 2;
    string email = 3;
    map<string, string> preferences = 4;
    repeated string permissions = 5;
    google.protobuf.Timestamp last_login = 6;
    bool is_active = 7;
}

message APIMetrics {
    string endpoint = 1;
    int64 request_count = 2;
    double avg_response_time = 3;
    int64 error_count = 4;
    map<string, int64> status_codes = 5;
    google.protobuf.Timestamp measured_at = 6;
}

message ProtoSystemData {
    repeated LogEntry logs = 1;
    repeated UserProfile users = 2;
    repeated APIMetrics metrics = 3;
    map<string, string> system_info = 4;
}
